Snapping to edge center doesn't work as expected when using axis locking #81465

Closed
opened 2020-10-05 19:56:24 +02:00 by Tomi · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-05 16:06, hash: 3e463467d2
Worked: (newest version of Blender that worked as expected)

Short description of error
Seems like the snapping "Plane" is dependent of viewing angle, and that doesn't make sense when
using axis locking, snapping works as intended if using orthographic view in some cases (Like in the video below). This affects object snapping too.

This video explains the problem better:
2020-10-05 20-34-03.mkv

Exact steps for others to reproduce the error

  1. create cube
  2. set snapping to edge center
  3. try snapping (g/move) one of the vertices to the same level with some edge's center point while using axis locking.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-05 16:06, hash: `3e463467d2` Worked: (newest version of Blender that worked as expected) **Short description of error** Seems like the snapping "Plane" is dependent of viewing angle, and that doesn't make sense when using axis locking, snapping works as intended if using orthographic view in some cases (Like in the video below). This affects object snapping too. This video explains the problem better: [2020-10-05 20-34-03.mkv](https://archive.blender.org/developer/F8958524/2020-10-05_20-34-03.mkv) **Exact steps for others to reproduce the error** 1. create cube 2. set snapping to edge center 3. try snapping (g/move) one of the vertices to the same level with some edge's center point while using axis locking.
Author

Added subscriber: @Tva

Added subscriber: @Tva

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-10-06 21:14:08 +02:00

Thanks for the report,
I can confirm.
Bug introduced in 4eda60c2d8

Thanks for the report, I can confirm. Bug introduced in 4eda60c2d8

This issue was referenced by eb68cd713b

This issue was referenced by eb68cd713b151d97394cd9c9d12d9ee8148970ec

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81465
No description provided.