Fix T81465: Snapping to edge center doesn't work as expected when using axis locking

The result was being affected by the view alignment correction.

Regression introduced in rB4eda60c2d82d