source/blender/editors/transform/transform_constraints.c
@@ -384,9 +384,9 @@ static void applyAxisConstraintVec(
 
     if (activeSnap(t)) {
       if (validSnap(t)) {
-        is_snap_to_point = (t->tsnap.snapElem & SCE_SNAP_MODE_VERTEX) != 0;
         is_snap_to_edge = (t->tsnap.snapElem & SCE_SNAP_MODE_EDGE) != 0;
         is_snap_to_face = (t->tsnap.snapElem & SCE_SNAP_MODE_FACE) != 0;
+        is_snap_to_point = !is_snap_to_edge && !is_snap_to_face;
       }
       else if (t->tsnap.snapElem & SCE_SNAP_MODE_GRID) {
         is_snap_to_point = true;
